--- a/sass/blocks/footer.scss
+++ b/sass/blocks/footer.scss
@@ -58,6 +58,4 @@
 .footer-big {
     padding-top: 40px;
     padding-bottom: 40px;
-    background-color: black;
-
 }
