--- a/sass/blocks/room.scss
+++ b/sass/blocks/room.scss
@@ -398,7 +398,7 @@
       width: 50%;
       text-align: center;
       margin-top: 0.5em;
-      margin-left: 15px;
+      margin-left: 20px;
   }
 
   .room__gift-1408 {
@@ -410,7 +410,7 @@
     vertical-align: top;
     padding: 10px 20px;
     margin: 0 auto;
-    font-size: 20px;
+    font-size: 18px;
     font-family: $main-text;
     text-decoration: none;
     color: #FFFFFF;
